# agent-pseudocode

./: .apseudo-lint.toml  .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .mcp.json  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierignore  .project-standards.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  STATUS.md  TODO.md  package-lock.json  package.json  pyproject.toml
.agents/skills/agent-pseudocode/: SKILL.md
.agents/skills/markdown-frontmatter/: SKILL.md
.apseudo/: scripts.toml
.claude/: settings.json
.claude/hooks/: README.md
.claude/skills/agent-pseudocode/: SKILL.md
.codex/: README.md  config.toml  hooks.json
.github/workflows/: apseudo-lint.yml  check.yml  cli-docs-check.yml  format.yml  lint-markdown.yml  validate-specs.yml  validate-standards.yml
.standards/: catalog.toml  config.toml  lock.toml
docs/: README.md  STATUS.md  TODO.md  scratchpad.md  usage.md
docs/adr/: README.md  adr-0001-relocate-language-reference-docs.md  adr-0002-merge-python-tooling-ci-into-apseudo-lint.md  adr-0003-markdown-frontmatter-scope-and-conventions.md
docs/apseudo-docs/enforcement/: ENFORCEMENT-GUIDE.md  ENFORCEMENT.md
docs/apseudo-docs/examples/: markdown-fence-demo.md  review-loop.apseudo
docs/apseudo-docs/features/: AUTOCOMPLETE.md  FORMATTER-LSP-AUTOCOMPLETE.md  FORMATTER.md  HOOKS.md  LANGUAGE-SERVER.md  MCP.md  SKILLS.md
docs/apseudo-docs/roadmap/: FUTURE-LINTER.md  FUTURE-VERSIONS.md
docs/apseudo-docs/usage/: AGENT-INSTRUCTIONS-WORDING.md  IMPLEMENTATION-GUIDE.md  INSTALL.md  KATE.md  README.md  REPOSITORY-LAYOUT.md  RUNNER-USAGE.md  TESTING.md  VSCODE.md  agent-tasks.md  usage.md
docs/enforcement/: ENFORCEMENT.md
docs/examples/: nested-decision.apseudo
docs/examples/runner/: fix-ruff.apseudo
docs/features/: FORMATTER-LSP-AUTOCOMPLETE.md  FORMATTER.md  SKILLS.md
docs/handoff/: architecture.md  conventions.md  credentials.md  deployed.md  specs-plans.md  state.md
docs/handoff/bugs/: 001-mcp-resource-map-stale-paths.md  002-review-completeness-stale-paths.md  003-pre-migration-transcript-lint-errors.md  004-lsp-serve-unhandled-read-message.md  005-apseudo-lint-workflow-stale-codex-hooks-path.md  006-cli-json-slots-dataclass-attributeerror.md  007-explainer-aac-ld-player-static.md  INDEX.md  _regen_index.py
docs/handoff/sessions/: 2026-07.md
docs/reference/: EXECUTABLE-PSEUDOCODE-SPEC.md  PYTHONIC_PSEUDOCODE_STANDARD.md  RULES.md  SOURCES.md
docs/reference/language/: README.md  SCOPE-MAP.md  TOKEN-SPEC.md
docs/reference/pre-migration/: README.md  apseudo-chatgpt-conversation.md
docs/research/: README.md
docs/reviews/: FEATURE-GAP-ANALYSIS.md  PROJECT-REVIEW-RESULT.md  PROJECT-TRACEABILITY-REVIEW.md
docs/roadmap/: FUTURE-LINTER.md
docs/specs/: EXECUTABLE-PSEUDOCODE-SPEC.md  apseudo-validation-toolchain.md  repository-explainer-video.md
docs/specs/language/: README.md
docs/superpowers/plans/: 2026-07-08-adopt-standards.md  2026-07-23-repository-explainer-video-plan.md
docs/usage/: IMPLEMENTATION-GUIDE.md  INSTALL.md  README.md  usage.md
docs/usage/use-cases/: AGENT-FEEDING-PATHS.md  COMMON-WORKFLOWS.md  EXAMPLE-CATALOG.md  README.md
hooks/.claude/: README.md  settings.json
hooks/.codex/: README.md  hooks.json
integrations/agent-hooks/: apseudo-hook.py
mcp/: .mcp.json
media/repository-explainer/: README.md  asset-provenance.json  captions.srt  narration.json  production-evidence.json  project.json  theme.json
media/repository-explainer/captures/: manifest.json
media/repository-explainer/video_pipeline/: __init__.py  __main__.py  captions.py  capture.py  cli.py  errors.py  manifest.py  models.py  policy.py  quick_verify.py  render.py  runner_capture.py  runner_evidence.py  runner_runtime.py  runner_security.py  scene_content.py  scenes.py  speech.py  text_metrics.py  verify.py
products/: README.md
products/kate-integration/: README.md  agent-pseudocode.xml  lsp-client-settings.json  lsp-client-settings.markdown-opt-in.json
products/vscode-extension/: .vscodeignore  README.md  agent-pseudocode-0.6.1.vsix  extension.js  language-configuration.json  package-lock.json  package.json
products/vscode-extension/scripts/: check-extension.mjs  compile-grammars.mjs
products/vscode-extension/snippets/: agent-pseudocode.code-snippets  markdown.code-snippets
products/vscode-extension/syntaxes/: agent-pseudocode.tmLanguage.json  agent-pseudocode.tmLanguage.yaml  markdown-agent-pseudocode.tmLanguage.json  markdown-agent-pseudocode.tmLanguage.yaml
scripts/: apseudo  apseudo-claude  apseudo-codex  apseudo-explain  apseudo-format  apseudo-lint  apseudo-lsp  apseudo-mcp  apseudo-mermaid  apseudo-review  apseudo-run  apseudo-template  install-enforcement.sh  install-kate-user.sh  install-vscode-vsix.sh  plan.py  run-enforcement-smoke-test.sh
src/apseudo_lint/: __init__.py  __main__.py  cli.py  completions.py  config.py  discover.py  executable.py  explain_cli.py  extract.py  format_cli.py  formatting.py  lint.py  lsp.py  main_cli.py  mcp.py  mermaid.py  mermaid_cli.py  model.py  output.py  review.py  review_cli.py  rules.py  runner.py  runner_cli.py  runner_logging.py  symbols.py  template_cli.py  templates.py
tests/: test_bug_index.py  test_cli_json_output.py  test_formatter.py  test_linter.py  test_lsp_features.py  test_lsp_server.py  test_mcp_review_hooks.py  test_plan_bridge.py  test_runner.py  test_runner_operational.py
tests/fixtures/format/: messy.apseudo  messy.md
tests/fixtures/invalid/: missing_fallback.apseudo  no_return.apseudo  parse_error.md  unbounded_loop.apseudo  unbounded_while.apseudo  while_true.apseudo
tests/fixtures/valid/: executable_runner.apseudo  fenced.md  guard_clauses.apseudo  markdown_fence.md  review_loop.apseudo
tests/video/: conftest.py  test_captions.py  test_capture.py  test_cli.py  test_content.py  test_manifest.py  test_manifest_policy.py  test_quick_verify.py  test_render.py  test_runner_capture.py  test_runner_security.py  test_scenes.py  test_speech.py  test_verify.py
tests/video/fixtures/: approved-scene-digests.json
(+25 files in other folders)
