[project]
name = "agent-pseudocode-syntax-toolkit"
version = "0.6.1"
description = "Syntax highlighting, formatting, LSP, MCP, agent hooks, enforcement tooling, and executable agent-backed runners for Pythonic Agent Pseudocode."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Chris Purcell" }]
dependencies = []
keywords = [
  "pseudocode",
  "agent",
  "runner",
  "linter",
  "formatter",
  "language-server",
  "markdown",
  "vscode",
  "kate",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Text Editors",
]

[dependency-groups]
dev = [
    "basedpyright",
    "coverage[toml]",
    "pip-audit",
    "pytest>=9.0",
    "ruff>=0.14.11",
]

[project.scripts]
apseudo = "apseudo_lint.main_cli:main"
apseudo-lint = "apseudo_lint.cli:main"
apseudo-format = "apseudo_lint.format_cli:main"
apseudo-lsp = "apseudo_lint.lsp:main"
apseudo-explain = "apseudo_lint.explain_cli:main"
apseudo-template = "apseudo_lint.template_cli:main"
apseudo-mermaid = "apseudo_lint.mermaid_cli:main"
apseudo-mcp = "apseudo_lint.mcp:main"
apseudo-review = "apseudo_lint.review_cli:main"
apseudo-run = "apseudo_lint.runner_cli:main"
apseudo-claude = "apseudo_lint.runner_cli:claude_main"
apseudo-codex = "apseudo_lint.runner_cli:codex_main"

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

# Project name normalizes to "agent_pseudocode_syntax_toolkit", which does not match
# the actual package directory "src/apseudo_lint" — uv_build's default module
# discovery only looks at src/<normalized-project-name>/, so the mismatch must be
# declared explicitly or the build fails to find the module.
[tool.uv.build-backend]
module-name = "apseudo_lint"

[tool.apseudo_lint]
max_nesting = 4
strict = false
fail_on_warning = false
allowed_outcomes = [
  "Accepted",
  "Approved",
  "Blocked",
  "Deferred",
  "Failed",
  "NeedsInput",
  "NeedsUserDecision",
  "OpenIssue",
  "Rejected",
  "Skipped",
]
markdown_fence_languages = [
  "apseudo",
  "agent-pseudocode",
  "agent_pseudocode",
  "pythonic-pseudocode",
  "pseudocode-pythonic",
]
ignore_codes = []

exclude = [
  ".git",
  ".hg",
  ".svn",
  ".venv",
  "node_modules",
  "dist",
  "build",
  "docs/reference/pre-migration",
  "tests/fixtures/invalid",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
minversion = "9.0"
addopts = ["-ra", "--strict-markers", "--strict-config"]
markers = []

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]
extend-exclude = [".claude", ".agents", ".codex", ".continue"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "PIE", "PTH", "RET", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.basedpyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.14"
pythonPlatform = "All"
failOnWarnings = true
